...
    required bool isSuccess,
    Color? buttonColor,
    bool? isDismiss,
    double? titleSize,
  }) {
    AlertDialog alert = AlertDialog(
      key: Key("error-success-dialog"),
      shape: const RoundedRectangleBorder(
          borderRadius: BorderRadius.all(Radius.circular(8.0))),
      content: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          Lottie.asset(
...
          const SizedBox(
            height: 8,
          ),
          SizedBox(
            width: 200,
            child: CustomButtonView(
              key: Key('confirm-button'),
              textColor: Colors.white ,
              buttonText: confirm,
              onPressed: ()=>onConfirm!(),
              backgroundColor: isSuccess ? Colors.green : Colors.red
            ),
          ),
...
